# wez-sidebar

./: Cargo.toml  README.md  README_JA.md  config.example.toml
.github/workflows/: release.yml
scripts/: install-skills.sh
skills/spawn-session/: SKILL.md
spec/plan/: handoff.yaml
src/: api_client.rs  app.rs  config.rs  dock.rs  hooks.rs  init.rs  main.rs  reaper.rs  session.rs  terminal.rs  types.rs  ui.rs  usage.rs
