[package]
name = "wez-sidebar"
version = "0.1.0"
edition = "2021"
description = "WezTerm sidebar with Claude Code session monitoring and task management"
authors = ["tazawa-masayoshi"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Keychain
keyring = "3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
