[package]
name = "wez-sidebar"
version = "0.2.1"
edition = "2021"
description = "WezTerm sidebar/dock for real-time Claude Code session monitoring"
authors = ["kok1eee"]
license = "MIT"
repository = "https://github.com/kok1eee/wez-sidebar"
homepage = "https://github.com/kok1eee/wez-sidebar"
keywords = ["wezterm", "claude-code", "tui", "sidebar"]
categories = ["command-line-utilities"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# File watching
notify = "7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Keychain
keyring = "3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.25.0"
